--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/ListadoPolizas.cshtml
@@ -65,9 +65,8 @@
                                         }
 
                                     </div>
-                                    @if (Model.Count() > 0)
-                                    {
-                                        <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                  
+                                        <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%" >
                                             <thead>
                                                 <tr>
                                                     <th>Acciones</th>
@@ -98,7 +97,7 @@
                                                     </th>
 
                                                     <th>
-                                                        @Html.DisplayNameFor(model => model.empleados.numeroEmpleado)
+                                                        @Html.DisplayNameFor(model => model.id_elaborador)
                                                     </th>
 
 
@@ -110,6 +109,12 @@
                                                     <tr>
 
                                                         <td>
+                                                            @if (ViewBag.Autorizar != null && ViewBag.Autorizar)
+                                                            {
+                                                                <a href="@Url.Action("AutorizarControlling", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info " title="Autorizar/Rechazar">
+                                                                    <i class="fa fa-check-circle-o"></i>
+                                                                </a>
+                                                            }
                                                             @if (ViewBag.Validar != null && ViewBag.Validar)
                                                             {
                                                                 <a href="@Url.Action("ValidarArea", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success " title="Validar">
@@ -134,6 +139,7 @@
                                                                     <i class="fa fa-send"></i>
                                                                 </a>
                                                             }
+
 
 
                                                         </td>
@@ -162,21 +168,16 @@
                                                             @Html.DisplayFor(modelItem => item.estatus)
                                                         </td>
                                                         <td>
-                                                            @Html.DisplayFor(modelItem => item.empleados.numeroEmpleado)
+                                                            @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
                                                         </td>
-
-
                                                     </tr>
                                                 }
 
                                             </tbody>
                                         </table>
-                                    }
-                                    else
-                                    {
-                                        <h4>¡No hay registros disponibles!</h4>
-                                    }
+                                   
                                 </div>
+                                <br />
                                 @if (Model.Count() > 0)
                                 {
                                     <nav id="nav_paginacion" aria-label="...">
@@ -205,7 +206,7 @@
         $(document).ready(function () {
 
             //inicializa los data table
-            $('#datatable_1').DataTable({
+          var tabla =  $('#datatable_1').DataTable({
                 "paging": false,
                 "ordering": false,
                 "searching": false,
@@ -213,12 +214,13 @@
                 "info": false
             });
 
+
         });
 
         //agranda el tamaño de la barra
-        //window.onload = function () {
-        //    clicMenu(1);
-        //}
+        window.onload = function () {
+            clicMenu(2); //dos veces para acomodar la tabla
+        }
 
 
     </script>
